2019-xx-xx - 2.4.3
-------------------------------
- Fixed a problem with $service object.
- Fixed a problem with Service Provider price.
- Fixed few warnings during activated.

2019-03-18 - 2.4.2
-------------------------------
- Fixed a problem with custom confirmation email.
- Fixed a problem with slot availability.
- Added plugin specific text to privacy policy page (only during creation a policy page).

2018-11-26 - 2.4.1
-------------------------------
- Fixed a problem with Service Provider shortcode param name.
- Fixed a problem with start hour for specific configurations.
- Fixed a problem with appointments intervals.
- Fixed a problem with time slots when an appointment has no provider in inline-edit.

2018-06-28 - 2.4.0
-------------------------------
- Added ability to show/hide columns on "Services" settings screen.
- Added ability to show/hide columns on "Service Provider" settings screen.
- Added asterisk to additional, required fields (pro only).
- Added columns "Paddings" and "Location" on "Service Providers" settings screen (pro only).
- Added columns "Paddings", "Location" and "Shared resources" on "Services" settings screen (pro only).
- Added locations on appointment form.
- Added SERVICE_LOCATION placeholder replaced by a service Location in email templates.
- Fixed time display format to selected in WordPress options.
- Improved "confirmation" checkbox on Service Provider Profile page.
- Improved Object Cache clear.

2018-06-12 - 2.3.2
-------------------------------
- Added an option to force load Appointment's scripts and styles.
- Added a limit for "Service Capacity" on a service add and edit screen to the number of defined workers.
- Fixed a problem with appointment hour when a worker was not selected.
- Fixed a problem with more than one Service Provider on schedule table, when first is already busy, but second is not.
- Fixed a problem with service description when Service is not selected.
- Fixed problems with capacity.